complete UI change

--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 body {
   margin: 0;
@@ -18,5 +19,44 @@ code {
 }
 
 * {
+  
   scroll-behavior: smooth;
+}
+
+
+.scroller {
+  height: 1.2em;
+  line-height: 1.2em;
+  position: relative;
+  overflow: hidden;
+  width: inherit;
+  height: 40px;
+  
+  
+}
+.scroller > span {
+  position: absolute;
+  top: 0;
+  animation: slide 10s infinite;
+  font-weight: bold;
+  
+}
+@keyframes slide {
+  0% {
+    top: 0;
+    
+
+  }
+  25% {
+    top: -1.2em;
+    
+  }
+  50% {
+    top: -2.4em;
+    
+  }
+  75% {
+    top: -3.6em;
+    
+  }
 }
